--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -193,6 +193,7 @@
                             that.$entityContent.hide();
                             that.$contentHeader.html('工作人员会尽快与您联系，<br>请保持手机开机~');
                             that.$userCenter.show();
+                            that.$closeBtn.show();
                         },
                         error: function(error){
                             $('body').alert({
