--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -118,8 +118,8 @@
     </div>
 	<div class="wui-i-info p0">
         <div class="wui-i-settings pt15 pb15" style="color: #ffffff;">
-            <div class="wui-i-settingTitle fl mr15">奖项设置</div>
-            <div class="wui-i-settingData xa-settingData fl mb20">
+            <div class="wui-i-settingTitle mr15">奖项设置</div>
+            <div class="wui-i-settingData xa-settingData mb20" style="margin-left: 2em">
                 <ul >
                     <li data_cid="4">
                         一等奖:&nbsp;&nbsp;
@@ -161,8 +161,10 @@
             </div>
         </div>
 		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
-			<div class="wui-i-settingTitle fl mr15">活动时间</div>
-            <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
+			<div class="wui-i-settingTitle mr15">活动时间</div>
+            <div style="margin-left: 2em;">
+                <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
+            </div>
 		</div>
         <!--
         <i class="wui-i-sprite xui-sprite-prize"></i>
