--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -173,8 +173,8 @@
         </div>
         -->
         <div class="wui-i-record cl pt5 pb15">
-            <div class="wui-i-settingTitle fl mr15 mb10">中奖记录</div>
-            <div class="wui-i-recordData xa-recordData fl mb20">
+            <div class="wui-i-settingTitle mr15 mb10">中奖记录</div>
+            <div class="wui-i-recordData xa-recordData mb20" style="margin-left: 2em">
                 <ul>
                 </ul>
             </div>
