--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -119,7 +119,7 @@
 	<div class="wui-i-info p0">
         <div class="wui-i-settings pt15 pb15" style="color: #ffffff;">
             <div class="wui-i-settingTitle mr15">奖项设置</div>
-            <div class="wui-i-settingData xa-settingData mb20" style="margin-left: 2em">
+            <div class="wui-i-settingData xa-settingData" style="margin-left: 2em;margin-top: 10px;">
                 <ul >
                     <li data_cid="4">
                         一等奖:&nbsp;&nbsp;
@@ -162,7 +162,7 @@
         </div>
 		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
 			<div class="wui-i-settingTitle mr15">活动时间</div>
-            <div style="margin-left: 2em;">
+            <div style="margin-left: 2em;margin-top: 10px;margin-bottom: 10px;">
                 <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
             </div>
 		</div>
@@ -174,7 +174,7 @@
         -->
         <div class="wui-i-record cl pt5 pb15">
             <div class="wui-i-settingTitle mr15 mb10">中奖记录</div>
-            <div class="wui-i-recordData xa-recordData mb20" style="margin-left: 2em">
+            <div class="wui-i-recordData xa-recordData" style="margin-left: 2em;">
                 <ul>
                 </ul>
             </div>
