--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -266,6 +266,7 @@
                 };
                 wx.ready(function () {
                   // 1 判断当前版本是否支持指定 JS 接口，支持批量判断
+                  alert('wx.ready');
                   wx.checkJsApi({
                     jsApiList: [
                       'onMenuShareAppMessage',
