--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -232,8 +232,8 @@
             $(document).ready(function() {
 {#                $('a').highlight();#}
                 FastClick.attach(document.body);
-                alert(link);
                 alert(W.sharePageImg);
+                alert(W.sharePageTitle);
                 alert(W.sharePageDesc);
                 var hm = document.createElement("script");
                 hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
