--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -32,7 +32,7 @@
 					<input id="prize_info" name="prize_info" class="hide" value="">
 					</div>
 				</div>
-				<div class="xui-row">
+				<div class="xui-row" style="border-bottom: none;">
 					<div class="xui-i-left fl lh1">成为指定等级会员： </div>
 					<div class="fl mt20 ml10">
 						<select class="ml10 w120" name="group_id" id="group_id" data-validate="require-select">
