--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -232,9 +232,6 @@
             $(document).ready(function() {
 {#                $('a').highlight();#}
                 FastClick.attach(document.body);
-                alert(W.sharePageImg);
-                alert(W.sharePageTitle);
-                alert(W.sharePageDesc);
                 var hm = document.createElement("script");
                 hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
                 var s = document.getElementsByTagName("script")[0]; 
@@ -258,11 +255,11 @@
                     "title" : W.sharePageTitle,
                     // 点击分享按钮
                     trigger: function (res) {
-                       alert('用户点击分享按钮'+res);
+                       //alert('用户点击分享按钮'+res);
                     },
                     // 分享成功
                     success : function(res) {
-                       alert('success'+res);
+                       //alert('success'+res);
                     }
                 };
                 wx.ready(function () {
