修复bug4227功能问题【高级管理】-【带参数二维码】保存时提示问题,保存不上

--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -45,7 +45,7 @@
 				<div class="xui-row">
 					<div class="xui-i-left fl lh1">添加到分组： </div>
 					<div class="fl mt20 ml10">
-						<select class="ml10 w120" name="tag_id" id="tag_id" data-validate="require-select">
+						<select class="ml10 w120" name="tag_id" id="tag_id">
 						<option value="-1">未分组</option>
 						{% for tag in tags %}
 							<option value="{{tag.id}}"{% if qrcode.tag_id == tag.id %}selected="selected"{% endif%}>{{tag.name}}</option>
