--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -271,7 +271,7 @@
                       'onMenuShareQQ',
                       'previewImage',
                       'hideOptionMenu',
-                      'showOptionMenu',
+                      'showOptionMenu'
                     ],
                     success: function (res) {
                       if(isHideWeixinOptionMenu){
@@ -281,18 +281,19 @@
                            wx.hideOptionMenu();
                         }
                       if(!W.wxShareData)
-                        return
+                        console.log('1111111111');
+                        return;
                       res = res.checkResult;
                       if(res.onMenuShareAppMessage)
-                        wx.onMenuShareAppMessage(W.wxShareData)
+                        wx.onMenuShareAppMessage(W.wxShareData);
                       if(res.onMenuShareTimeline)
-                        wx.onMenuShareTimeline(W.wxShareData)
+                        wx.onMenuShareTimeline(W.wxShareData);
                       if(res.onMenuShareQQ)
-                        wx.onMenuShareQQ(W.wxShareData)
+                        wx.onMenuShareQQ(W.wxShareData);
                       if(res.previewImage)
-                        W.ImagePreview(wx)
+                        W.ImagePreview(wx);
                       if(res.hideOptionMenu && isHideWeixinOptionMenu)
-                        wx.hideOptionMenu()
+                        wx.hideOptionMenu();
                       if(res.showOptionMenu && !isHideWeixinOptionMenu)
                         wx.showOptionMenu()
                     }
