--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -281,7 +281,7 @@
                            wx.hideOptionMenu();
                         }
                       if(!W.wxShareData)
-                        console.log('1111111111');
+                        alert('1111111111');
                         return;
                       res = res.checkResult;
                       if(res.onMenuShareAppMessage)
