mod css 二维码弹窗

--- a/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
+++ b/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
@@ -36,8 +36,7 @@
                     <span>无奖励</span>
                 {% endif %}
                 </div>
-                <div style="clear: both"></div>
-                <div style="clear: both"></div>
+                <div style="clear: both;margin-bottom: 5px"></div>
             </div>
         </div>
     </div>
