--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -180,8 +180,8 @@
             </div>
         </div>
         <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 16px;margin: 0; color: white;border-top: 1px solid #ab39c4;">
-        <div class="wui-i-settingTitle fl mr15">活动规则:</div>
-            <div style="clear: both"></div>
+        <div class="wui-i-settingTitle mr15 mb10">活动规则:</div>
+            <div style="clear: both; margin-left: 2em;"></div>
             {{component.model.description|safe}}
         </div>
 	</div>
