--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -143,7 +143,7 @@
  * 用户调研survey description样式
  */
 .wui-surveyDescription {
-    padding: 20px 20px 0 20px;
+    padding: 35px 20px 0;
 }
 .wui-surveyDescription .wui-i-title {
 	font-size: 20px;
