--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -415,6 +415,9 @@ p.wui-i-start_time,p.wui-i-end_time{
     font-size: 16px;
     width: 45px;
 }
+.wui-lotterydescription-hide{
+	display: none;
+}
 .xa-lottery-unit-0{
 	background-position: 0 0;
 }
