样式问题【带参数二维码】新建二维码积分验证位置

--- a/weapp/static_v2/js/view/weixin_qrcode_prize/template.html
+++ b/weapp/static_v2/js/view/weixin_qrcode_prize/template.html
@@ -30,8 +30,8 @@
 </script>
 
 <script id="market-tool-prize-score-input-tmpl-src" type='text/x-jquery-tmpl'>
- <input id="prize_score_input" type="text" class="span2 prize_score" name="prize_score" placeholder="请输入积分数值" data-validate="require-positive-int" value="${score}">
- <div class="errorHint"></div>
+ <input id="prize_score_input" type="text" class="span2 prize_score fl" name="prize_score" placeholder="请输入积分数值" data-validate="require-positive-int" value="${score}">
+ <div class="errorHint fl" style="bottom:0px;"></div>
 </script>
 
 <script id="market-tool-prize-real-prize-input-tmpl-src" type='text/x-jquery-tmpl'>
