--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -134,9 +134,8 @@
 {% block js %}
     <script>
         var parentUrl = document.referrer;
-        alert(parentUrl);
-        if(parentUrl.indexOf('user_center')>0){
-            window.location.reload(true);
+        if(parentUrl && parentUrl.indexOf('user_center')>0){
+            window.location.replace(window.location.href);
         }
         function afterStop(data){
             //更新可玩次数和剩余积分
