修改 活动奖项 积分 保存不验证问题

--- a/weapp/apps/customerized_apps/event/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/workbench.html
@@ -75,6 +75,9 @@
     W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
     var bottomDistance = 110;
     
+    /* 是否页面验证 */
+    W.isUserPageWalidate = true;
+    
     var loadPages = function(pageManagerView) {
       W.getApi().call({
         app: 'apps',
