--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1074,8 +1074,10 @@ button.xui-removeImageButton{
 	max-width: 130px;
 	/*超过10个字的长度会掉下来*/
 }
-.xui-propertyView-imgAdjGroup .xui-removeImageButton {
-	display: none;
+.xui-propertyView-imgAdjGroup .xui-dynamicComponentControlImgBox .xui-removeImageButton,
+.xui-propertyView-imgDisplayGroup .xui-dynamicComponentControlImgBox .xui-removeImageButton,
+.xui-propertyView-imageNavGroup .xui-dynamicComponentControlImgBox .xui-removeImageButton{
+	display: none!important;
 }
 
 /*页头1*/
@@ -1309,6 +1311,10 @@ button.xui-removeImageButton{
 	display: block;
 }
 
+/*所有连接显示删除按钮*/
+.xui-wepage-workbenchPage .xui-selected-title-box .xui-removeImageButton,.xui-wepage-globalNavPage .xui-selected-title-box .xui-removeImageButton{
+	display: block!important;
+}
 
 /**
  * dialog对话框 商品列表
