--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -1410,6 +1410,8 @@ ul.wui-relatelink li h3{
     width: 100%;
     height: 100%;
     min-height: 430px;
+    /*480有问题,会导致预览的时候出现滚动条*/
+    /*min-height: 480px;*/
     position: absolute;
 }
 /*div[data-type='wepage.personalityTheme_group'] .xui-designPage-actionPanel,
