--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -95,7 +95,7 @@
 								isEnableSort: true
 							});
 							parent.W.design.DesignPageView = page;
-                            $('.xa-designPage').find("div[data-cid='2']").get(0).click();
+                            $('.xa-designPage').find("div[data-cid='"+parent.W.autoSelectCid+"']").get(0).click();
 						}, 10);							
 					} else {
 						//parent没有准备好，准备下一次检测
