修改 店铺导航bug

--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -78,6 +78,12 @@
     W.isUseWepage = {% if user.get_profile.is_use_wepage %}true{% else %}false{% endif %};
     var bottomDistance = 110;
 
+    /* 是否可编辑标题 */
+    W.isEditPageTitleWepage = true; 
+
+    /* 自动选中cid，当页面进来的时候 */
+    W.autoSelectCid = 0
+
     var loadPages = function(pageManagerView) {
       W.getApi().call({
         app: 'termite2',
