--- a/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
@@ -75,6 +75,9 @@
     W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
     var bottomDistance = 110;
     
+    /* 自动选中cid，当页面进来的时候 */
+    W.autoSelectCid = 2
+    
     var loadPages = function(pageManagerView) {
       W.getApi().call({
         app: 'apps',
