--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -118,6 +118,7 @@
     var isCreateNewData = {% if is_create_new_data %}true{% else %}false{% endif %};
     W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
     var bottomDistance = 110;
+    W.autoSelectCid = 2;
 
     /* 是否页面验证 */
     W.isUserPageWalidate = true;
