--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -31,7 +31,8 @@ body {
 	/*公告有影响*/
 	border: solid 1px #CCC;
 	background-color: white;
-	overflow: hidden;
+	/*辅助空白会影响到样式*/
+	/*overflow: hidden;*/
 	z-index: 1000;
 	/*min-height: 200px;*/
 	/*公告有影响*/
