--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -265,7 +265,7 @@
         $(document).ready(function() {
             // 个性模板背景图片高度适配
             var height = $(window).height();
-            var $shopBackground =$('.wa-shop-backgroud');
+            var $shopBackground =$('.wui-shop-Bg');
             if( $shopBackground.length > 0 ){
                 $shopBackground.height(height);
             }
