--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -150,10 +150,11 @@ $(document).ready(function() {
 		});
 	});
 	
+	var participant_name,startTime,endTime;
 	$('.xa-search').click(function(event) {
-		var participant_name = $.trim($('[name="participant_name"]').val());
-		var startTime = $.trim($('[name="start_time"]').val());
-		var endTime = $.trim($('[name="end_time"]').val());
+		participant_name = $.trim($('[name="participant_name"]').val());
+		startTime = $.trim($('[name="start_time"]').val());
+		endTime = $.trim($('[name="end_time"]').val());
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			participant_name: participant_name,
@@ -167,14 +168,21 @@ $(document).ready(function() {
     //export
     $('.xa-export').click(function(event){
         W.getLoadingView();
+		participant_name = $.trim($('[name="participant_name"]').val());
+		startTime = $.trim($('[name="start_time"]').val());
+		endTime = $.trim($('[name="end_time"]').val());
         var export_id =window.location.search.split('?id=')[1];
         W.getApi().call({
             method: 'get',
             app: 'apps/survey',
             resource: 'survey_participances-export',
-            args: {'export_id':export_id},
+            args: {
+				'export_id':export_id,
+				'participant_name': participant_name,
+				'start_time': startTime,
+				'end_time': endTime
+			},
             success: function(resp){
-
                 if(resp.code == 200){
                     $('#export_href').prop({
                         'href': resp.download_path,
