样式问题【会员管理】给选中的人群发,样式

--- a/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
@@ -88,7 +88,7 @@
                     <div class="hidden xa-sendMemberIds" data-send-member-ids={{member_ids_str}}></div>
                 {% else %}
                     {% for member in member_list %}
-                        <span class="xui-sendTargetNames xa-sendTargetNames ml5 fl" data-member-id={{member.id}}>{{member.name|safe}}</span>
+                        <span class="xui-sendTargetGroup xa-sendTargetNames ml5 fl" data-member-id={{member.id}}>{{member.name|safe}}</span>
                     {% endfor %}
                 {% endif %}
                 <div class="cb"></div>
