--- a/weapp/static_v2/css/mass_message.css
+++ b/weapp/static_v2/css/mass_message.css
@@ -70,6 +70,7 @@
 .xui-massSendingMessage .xui-massageSendingHead .xui-sendTargetNames{
 	background-color: #fff;
 	border: 1px solid #060606;
+	margin-bottom: 5px;
 	padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 3px;
@@ -82,7 +83,7 @@
 	height: 15px;
 	background-size: 100%;
 	position: absolute;
-	margin-top: -4px;
+	margin-top: -10px;
 	margin-left: 2px;
 	display: inline-block;
 }
