--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -354,6 +354,9 @@ p.wui-i-start_time,p.wui-i-end_time{
 	color: #ffffff;
 	font-size: 14px;
 }
+.wui-i-record .wui-i-recordData li{
+	margin-top: 5px;
+}
 .wui-i-settingData.xa-settingData li {
     font-size: 14px;
     margin-left: 7px;
