--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/editor/weizoom_card_num_record.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/editor/weizoom_card_num_record.html
@@ -74,7 +74,7 @@
 							{% if record.order_id != '-1'%}
 								{% if is_weizoom_mall %}
 									{% if record.true_order_id %}
-									<a href="/mall/order_detail/get/?order_id={{ record.true_order_id }}">{{ record.order_id }}</a>
+									<a href="/mall2/order/?order_id={{ record.true_order_id }}">{{ record.order_id }}</a>
 									{% else %}
 									{{ record.order_id }}
 									{% endif %}
